# ComfyUI-UmeAiRT-Toolkit

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  README.md  TODO.md  __init__.py  create_placeholder.py  error.txt  index.html  logger.py  mkdocs.yml  nodes.py  optimization_utils.py  pyproject.toml  requirements.txt  ruff.toml  run_tests.py  sitemap.xml  temp_advanced_node.py  umeairt_bundles.json
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
changelog/: index.html
codemaps/structure/: index.html
codemaps/wireless/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  contributing.md  getting-started.md  index.md
docs/codemaps/: structure.md  wireless.md
docs/nodes/: bundle-loader.md  checkpoint-loader.md  controlnet.md  detailer-daemon.md  facedetailer.md  fragmented-loader.md  generation-settings.md  health-check.md  image-loader.md  image-process.md  index.md  inpaint-composite.md  ksampler.md  label.md  log-viewer.md  lora-blocks.md  multi-lora.md  prompt-inputs.md  seedvr2-upscale.md  source-image-output.md  ultimate-upscale.md
facedetailer_core/: logic.py
getting-started/: index.html
image_saver_core/: logic.py  saver.py  utils.py
modules/: block_inputs.py  block_loaders.py  block_nodes.py  block_sampler.py  common.py  detail_daemon_nodes.py  download_utils.py  face_nodes.py  image_nodes.py  logger.py  logic_nodes.py  manifest.py  model_nodes.py  optimization_utils.py  seedvr2_nodes.py  settings_nodes.py  upscale_nodes.py  utils_nodes.py
modules/image_saver_core/: logic.py
modules/preprocessors/: depth_core.py  dwpose_core.py  hed_core.py  lineart_core.py
modules/preprocessors/networks/: aux_util.py
modules/preprocessors/networks/dwpose/: __init__.py  (+4 more)
nodes/: index.html
nodes/bundle-downloader/: index.html
nodes/bundle-loader/: index.html
nodes/checkpoint-loader/: index.html
nodes/controlnet/: index.html
nodes/detailer-daemon/: index.html
nodes/facedetailer/: index.html
nodes/flux-loader/: index.html
nodes/fragmented-loader/: index.html
nodes/generation-settings/: index.html
nodes/health-check/: index.html
nodes/image-loader/: index.html
nodes/image-process/: index.html
nodes/image-saver/: index.html
nodes/inpaint-composite/: index.html
nodes/ksampler/: index.html
nodes/label/: index.html
nodes/log-viewer/: index.html
nodes/lora-blocks/: index.html
nodes/multi-lora/: index.html
nodes/pack-unpack/: index.html
nodes/prompt-inputs/: index.html
nodes/seedvr2-upscale/: index.html
nodes/source-image-output/: index.html
nodes/ultimate-upscale/: index.html
nodes/zimg-loader/: index.html
search/: search_index.json
seedvr2_core/: progress.py  seedvr2_adapter.py
tests/: test_block_inputs.py  test_block_loaders.py  test_block_sampler.py  test_common.py  test_detail_daemon_nodes.py  test_download_utils.py  test_face_nodes.py  test_image_nodes.py  test_image_saver_logic.py  test_logic_nodes.py  test_manifest.py  test_optimization.py  test_registration.py  test_seedvr2_nodes.py  test_smoke.py  test_tooltips.py  test_traversal.py  test_upscale_nodes.py  test_utils_nodes.py
usdu_core/modules/: processing.py
web/: umeairt_colors.js  umeairt_imagenote.js  umeairt_log_viewer.js  umeairt_signature.js
